Correction des erreurs dans le workflow d'exportation des outputs Terraform

--- a/.github/workflows/1-terraform-outputs-to-secrets.yml
+++ b/.github/workflows/1-terraform-outputs-to-secrets.yml
@@ -28,17 +28,17 @@ jobs:
     name: Export Terraform Outputs to GitHub Secrets
     runs-on: ubuntu-latest
     environment: ${{ github.event.inputs.environment }}
-    
+
     permissions:
       # Nécessaire pour mettre à jour les secrets GitHub
       contents: read
       id-token: write
-      
+
     steps:
       # Étape 1: Récupération du code source
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       # Étape 2: Configuration des identifiants AWS
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -46,52 +46,58 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
-      
+
       # Étape 3: Configuration de Terraform
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.5.7
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-      
+
       # Étape 4: Initialisation de Terraform
       - name: Terraform Init
         run: terraform init
         working-directory: ./infrastructure
-      
+
       # Étape 5: Récupération des outputs Terraform
       - name: Terraform Output
         id: terraform-output
         run: |
           # Récupérer tous les outputs Terraform et les stocker dans des variables
           echo "Récupération des outputs Terraform..."
-          
+
           # EC2 Java Tomcat Public IP
-          EC2_PUBLIC_IP=$(terraform output -raw ec2_java_tomcat_public_ip || echo "")
+          EC2_PUBLIC_IP=$(terraform output -raw ec2_public_ip || echo "")
           echo "EC2_PUBLIC_IP=$EC2_PUBLIC_IP" >> $GITHUB_ENV
           echo "EC2 Public IP: $EC2_PUBLIC_IP"
-          
+
           # S3 Bucket Name
           S3_BUCKET_NAME=$(terraform output -raw s3_bucket_name || echo "")
           echo "S3_BUCKET_NAME=$S3_BUCKET_NAME" >> $GITHUB_ENV
           echo "S3 Bucket Name: $S3_BUCKET_NAME"
-          
-          # Amplify App URL
-          AMPLIFY_APP_URL=$(terraform output -raw amplify_app_url || echo "")
+
+          # Amplify App URL - Non disponible dans les outputs
+          AMPLIFY_APP_URL="Non disponible"
           echo "AMPLIFY_APP_URL=$AMPLIFY_APP_URL" >> $GITHUB_ENV
-          echo "Amplify App URL: $AMPLIFY_APP_URL"
-          
+          echo "Amplify App URL: $AMPLIFY_APP_URL (Non disponible dans les outputs)"
+
           # RDS Endpoint
           RDS_ENDPOINT=$(terraform output -raw rds_endpoint || echo "")
           echo "RDS_ENDPOINT=$RDS_ENDPOINT" >> $GITHUB_ENV
           echo "RDS Endpoint: $RDS_ENDPOINT"
-          
-          # Grafana URL
-          GRAFANA_URL=$(terraform output -raw grafana_url || echo "")
+
+          # Grafana URL - Construit à partir de l'output grafana_access_note
+          GRAFANA_ACCESS_NOTE=$(terraform output -raw grafana_access_note || echo "")
+          # Construire l'URL Grafana à partir de l'IP EC2 du monitoring
+          if [[ -n "$EC2_PUBLIC_IP" ]]; then
+            GRAFANA_URL="http://$EC2_PUBLIC_IP:3000"
+          else
+            GRAFANA_URL="Non disponible"
+          fi
           echo "GRAFANA_URL=$GRAFANA_URL" >> $GITHUB_ENV
-          echo "Grafana URL: $GRAFANA_URL"
+          echo "Grafana URL: $GRAFANA_URL (Construit à partir de l'IP EC2)"
         working-directory: ./infrastructure
-      
+
       # Étape 6: Mise à jour des secrets GitHub
       - name: Update GitHub Secrets
         uses: gliech/create-github-secret-action@v1
@@ -99,35 +105,35 @@ jobs:
           name: TF_EC2_PUBLIC_IP
           value: ${{ env.EC2_PUBLIC_IP }}
           pa_token: ${{ secrets.GH_PAT }}
-      
+
       - name: Update S3 Bucket Secret
         uses: gliech/create-github-secret-action@v1
         with:
           name: TF_S3_BUCKET_NAME
           value: ${{ env.S3_BUCKET_NAME }}
           pa_token: ${{ secrets.GH_PAT }}
-      
+
       - name: Update Amplify URL Secret
         uses: gliech/create-github-secret-action@v1
         with:
           name: TF_AMPLIFY_APP_URL
           value: ${{ env.AMPLIFY_APP_URL }}
           pa_token: ${{ secrets.GH_PAT }}
-      
+
       - name: Update RDS Endpoint Secret
         uses: gliech/create-github-secret-action@v1
         with:
           name: TF_RDS_ENDPOINT
           value: ${{ env.RDS_ENDPOINT }}
           pa_token: ${{ secrets.GH_PAT }}
-      
+
       - name: Update Grafana URL Secret
         uses: gliech/create-github-secret-action@v1
         with:
           name: TF_GRAFANA_URL
           value: ${{ env.GRAFANA_URL }}
           pa_token: ${{ secrets.GH_PAT }}
-      
+
       # Étape 7: Résumé
       - name: Summary
         run: |
