--- a/.github/workflows/1-terraform-outputs-to-secrets.yml
+++ b/.github/workflows/1-terraform-outputs-to-secrets.yml
@@ -98,41 +98,59 @@ jobs:
           echo "Grafana URL: $GRAFANA_URL (Construit à partir de l'IP EC2)"
         working-directory: ./infrastructure
 
-      # Étape 6: Mise à jour des secrets GitHub
+      # Étape 6: Mise à jour des secrets GitHub avec actions/github-script
       - name: Update GitHub Secrets
-        uses: gliech/create-github-secret-action@v1
+        uses: actions/github-script@v7
+        env:
+          EC2_PUBLIC_IP: ${{ env.EC2_PUBLIC_IP }}
+          S3_BUCKET_NAME: ${{ env.S3_BUCKET_NAME }}
+          AMPLIFY_APP_URL: ${{ env.AMPLIFY_APP_URL }}
+          RDS_ENDPOINT: ${{ env.RDS_ENDPOINT }}
+          GRAFANA_URL: ${{ env.GRAFANA_URL }}
         with:
-          name: TF_EC2_PUBLIC_IP
-          value: ${{ env.EC2_PUBLIC_IP }}
-          pa_token: ${{ secrets.GH_PAT }}
+          github-token: ${{ secrets.GH_PAT }}
+          script: |
+            const { EC2_PUBLIC_IP, S3_BUCKET_NAME, AMPLIFY_APP_URL, RDS_ENDPOINT, GRAFANA_URL } = process.env;
 
-      - name: Update S3 Bucket Secret
-        uses: gliech/create-github-secret-action@v1
-        with:
-          name: TF_S3_BUCKET_NAME
-          value: ${{ env.S3_BUCKET_NAME }}
-          pa_token: ${{ secrets.GH_PAT }}
+            // Fonction pour mettre à jour un secret
+            async function updateSecret(name, value) {
+              console.log(`Updating secret ${name}...`);
+              try {
+                // Récupérer la clé publique du repo pour chiffrer le secret
+                const { data: publicKeyData } = await github.rest.actions.getRepoPublicKey({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo
+                });
 
-      - name: Update Amplify URL Secret
-        uses: gliech/create-github-secret-action@v1
-        with:
-          name: TF_AMPLIFY_APP_URL
-          value: ${{ env.AMPLIFY_APP_URL }}
-          pa_token: ${{ secrets.GH_PAT }}
+                // Chiffrer la valeur du secret
+                const sodium = require('tweetsodium');
+                const messageBytes = Buffer.from(value);
+                const keyBytes = Buffer.from(publicKeyData.key, 'base64');
+                const encryptedBytes = sodium.seal(messageBytes, keyBytes);
+                const encrypted = Buffer.from(encryptedBytes).toString('base64');
 
-      - name: Update RDS Endpoint Secret
-        uses: gliech/create-github-secret-action@v1
-        with:
-          name: TF_RDS_ENDPOINT
-          value: ${{ env.RDS_ENDPOINT }}
-          pa_token: ${{ secrets.GH_PAT }}
+                // Créer ou mettre à jour le secret
+                await github.rest.actions.createOrUpdateRepoSecret({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  secret_name: name,
+                  encrypted_value: encrypted,
+                  key_id: publicKeyData.key_id
+                });
 
-      - name: Update Grafana URL Secret
-        uses: gliech/create-github-secret-action@v1
-        with:
-          name: TF_GRAFANA_URL
-          value: ${{ env.GRAFANA_URL }}
-          pa_token: ${{ secrets.GH_PAT }}
+                console.log(`Secret ${name} updated successfully.`);
+              } catch (error) {
+                console.error(`Error updating secret ${name}: ${error.message}`);
+                core.setFailed(`Error updating secret ${name}: ${error.message}`);
+              }
+            }
+
+            // Mettre à jour tous les secrets
+            await updateSecret('TF_EC2_PUBLIC_IP', EC2_PUBLIC_IP);
+            await updateSecret('TF_S3_BUCKET_NAME', S3_BUCKET_NAME);
+            await updateSecret('TF_AMPLIFY_APP_URL', AMPLIFY_APP_URL);
+            await updateSecret('TF_RDS_ENDPOINT', RDS_ENDPOINT);
+            await updateSecret('TF_GRAFANA_URL', GRAFANA_URL);
 
       # Étape 7: Résumé
       - name: Summary
