Amélioration de l'infrastructure : Configuration de Grafana/Prometheus dans des conteneurs Docker sur EC2 et résolution des problèmes de connexion SSH

--- a/.github/workflows/1-terraform-outputs-to-secrets.yml
+++ b/.github/workflows/1-terraform-outputs-to-secrets.yml
@@ -86,16 +86,21 @@ jobs:
           echo "RDS_ENDPOINT=$RDS_ENDPOINT" >> $GITHUB_ENV
           echo "RDS Endpoint: $RDS_ENDPOINT"
 
-          # Grafana URL - Construit à partir de l'output grafana_access_note
-          GRAFANA_ACCESS_NOTE=$(terraform output -raw grafana_access_note || echo "")
-          # Construire l'URL Grafana à partir de l'IP EC2 du monitoring
-          if [[ -n "$EC2_PUBLIC_IP" ]]; then
-            GRAFANA_URL="http://$EC2_PUBLIC_IP:3000"
-          else
+          # Grafana URL - Récupérée directement depuis les outputs Terraform
+          GRAFANA_URL=$(terraform output -raw grafana_url || echo "")
+          if [[ -z "$GRAFANA_URL" ]]; then
             GRAFANA_URL="Non disponible"
           fi
           echo "GRAFANA_URL=$GRAFANA_URL" >> $GITHUB_ENV
-          echo "Grafana URL: $GRAFANA_URL (Construit à partir de l'IP EC2)"
+          echo "Grafana URL: $GRAFANA_URL"
+
+          # Monitoring Instance Public IP
+          MONITORING_IP=$(terraform output -raw monitoring_instance_public_ip || echo "")
+          if [[ -z "$MONITORING_IP" ]]; then
+            MONITORING_IP="Non disponible"
+          fi
+          echo "MONITORING_IP=$MONITORING_IP" >> $GITHUB_ENV
+          echo "Monitoring Instance Public IP: $MONITORING_IP"
         working-directory: ./infrastructure
 
       # Étape 6: Mise à jour des secrets GitHub avec actions/github-script
@@ -107,10 +112,11 @@ jobs:
           AMPLIFY_APP_URL: ${{ env.AMPLIFY_APP_URL }}
           RDS_ENDPOINT: ${{ env.RDS_ENDPOINT }}
           GRAFANA_URL: ${{ env.GRAFANA_URL }}
+          MONITORING_IP: ${{ env.MONITORING_IP }}
         with:
           github-token: ${{ secrets.GH_PAT }}
           script: |
-            const { EC2_PUBLIC_IP, S3_BUCKET_NAME, AMPLIFY_APP_URL, RDS_ENDPOINT, GRAFANA_URL } = process.env;
+            const { EC2_PUBLIC_IP, S3_BUCKET_NAME, AMPLIFY_APP_URL, RDS_ENDPOINT, GRAFANA_URL, MONITORING_IP } = process.env;
 
             // Fonction pour mettre à jour un secret
             async function updateSecret(name, value) {
@@ -151,6 +157,7 @@ jobs:
             await updateSecret('TF_AMPLIFY_APP_URL', AMPLIFY_APP_URL);
             await updateSecret('TF_RDS_ENDPOINT', RDS_ENDPOINT);
             await updateSecret('TF_GRAFANA_URL', GRAFANA_URL);
+            await updateSecret('TF_MONITORING_IP', MONITORING_IP);
 
       # Étape 7: Résumé
       - name: Summary
@@ -162,4 +169,5 @@ jobs:
           echo "* **AMPLIFY_APP_URL** : ${{ env.AMPLIFY_APP_URL }}" >> $GITHUB_STEP_SUMMARY
           echo "* **RDS_ENDPOINT** : ${{ env.RDS_ENDPOINT }}" >> $GITHUB_STEP_SUMMARY
           echo "* **GRAFANA_URL** : ${{ env.GRAFANA_URL }}" >> $GITHUB_STEP_SUMMARY
+          echo "* **MONITORING_IP** : ${{ env.MONITORING_IP }}" >> $GITHUB_STEP_SUMMARY
           echo "Ces secrets peuvent maintenant être utilisés dans les autres workflows." >> $GITHUB_STEP_SUMMARY
