--- a/.github/workflows/0-infra-deploy-destroy.yml
+++ b/.github/workflows/0-infra-deploy-destroy.yml
@@ -20,8 +20,13 @@ on:
           - plan     # Prévisualiser les changements sans les appliquer
           - apply    # Appliquer les changements à l'infrastructure
           - destroy  # Détruire l'infrastructure existante
+      use_stored_ssh_key:
+        description: 'Utiliser la clé SSH publique stockée dans les secrets GitHub'
+        required: false
+        default: true
+        type: boolean
       ssh_public_key:
-        description: 'Clé SSH publique pour les instances EC2 (optionnel)'
+        description: 'Clé SSH publique pour les instances EC2 (ignoré si use_stored_ssh_key est true)'
         required: false
         type: string
 
@@ -139,7 +144,7 @@ jobs:
             -var="db_username=${{ secrets.DB_USERNAME }}" \
             -var="db_password=${{ secrets.DB_PASSWORD }}" \
             -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
-            -var="ssh_public_key=${{ github.event.inputs.ssh_public_key || '' }}" \
+            -var="ssh_public_key=${{ github.event.inputs.use_stored_ssh_key == 'true' && secrets.EC2_SSH_PUBLIC_KEY || github.event.inputs.ssh_public_key || '' }}" \
             -var="github_token=${{ secrets.GH_PAT || '' }}" \
             -var="repo_owner=${{ github.repository_owner }}" \
             -var="repo_name=${{ github.repository }}" \
@@ -183,7 +188,7 @@ jobs:
             -var="db_username=${{ secrets.DB_USERNAME }}" \
             -var="db_password=${{ secrets.DB_PASSWORD }}" \
             -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
-            -var="ssh_public_key=${{ github.event.inputs.ssh_public_key || '' }}" \
+            -var="ssh_public_key=${{ github.event.inputs.use_stored_ssh_key == 'true' && secrets.EC2_SSH_PUBLIC_KEY || github.event.inputs.ssh_public_key || '' }}" \
             -var="github_token=${{ secrets.GH_PAT || '' }}" \
             -var="repo_owner=${{ github.repository_owner }}" \
             -var="repo_name=${{ github.repository }}"
