Correction des incohérences dans les workflows GitHub Actions et mise à jour de la documentation

--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -1,4 +1,4 @@
-name: 0 - Deploy/Destroy Infrastructure (Terraform)
+name: 1 - Deploy/Destroy Infrastructure (Terraform)
 
 # -----------------------------------------------------------------------
 # Ce workflow gère le déploiement et la destruction de l'infrastructure AWS via Terraform.
@@ -20,16 +20,10 @@ on:
           - plan     # Prévisualiser les changements sans les appliquer
           - apply    # Appliquer les changements à l'infrastructure
           - destroy  # Détruire l'infrastructure existante
-      use_stored_ssh_key:
-        description: 'Utiliser la clé SSH publique stockée dans les secrets GitHub'
-        required: false
-        default: true
-        type: boolean
-      ssh_public_key:
-        description: 'Clé SSH publique pour les instances EC2 (ignoré si use_stored_ssh_key est true)'
-        required: false
+      ssh_key_pair_name:
+        description: 'Nom de la paire de clés EC2 existante dans AWS pour SSH'
+        required: true
         type: string
-
 
 
 # Variables d'environnement globales
@@ -68,52 +62,9 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      # Étape 4: Configuration des identifiants
-      - name: Setup Credentials
-        run: |
-          # Configuration de Terraform Cloud
-          mkdir -p $HOME/.terraform.d
-          echo '{"credentials": {"app.terraform.io": {"token": "'${{ secrets.TF_API_TOKEN }}'"}}}' > $HOME/.terraform.d/credentials.tfrc.json
-          cat $HOME/.terraform.d/credentials.tfrc.json
-
-          # Configuration explicite des identifiants AWS
-          mkdir -p $HOME/.aws
-          echo "[default]" > $HOME/.aws/credentials
-          echo "aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $HOME/.aws/credentials
-          echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $HOME/.aws/credentials
-          echo "region=${{ env.AWS_REGION }}" >> $HOME/.aws/credentials
-
-          # Configuration de la région AWS
-          echo "[default]" > $HOME/.aws/config
-          echo "region=${{ env.AWS_REGION }}" >> $HOME/.aws/config
-
-          # Sécuriser les fichiers
-          chmod 600 $HOME/.aws/credentials
-          chmod 600 $HOME/.aws/config
-
-      # Étape 5: Vérification de l'environnement
-      - name: Check Environment
-        run: |
-          echo "GitHub Runner OS: $RUNNER_OS"
-          echo "GitHub Runner Temp: $RUNNER_TEMP"
-          echo "GitHub Workspace: $GITHUB_WORKSPACE"
-          echo "AWS Region: ${{ env.AWS_REGION }}"
-          echo "AWS Access Key ID is set: ${{ secrets.AWS_ACCESS_KEY_ID != '' }}"
-          echo "AWS Secret Access Key is set: ${{ secrets.AWS_SECRET_ACCESS_KEY != '' }}"
-          echo "TF API Token is set: ${{ secrets.TF_API_TOKEN != '' }}"
-          # Vérifier la version d'AWS CLI
-          aws --version
-          # Vérifier si les identifiants AWS sont valides (sans révéler les valeurs)
-          aws sts get-caller-identity --query "Account" --output text || echo "AWS credentials not valid"
-
-      # Étape 6: Initialisation de Terraform
+      # Étape 4: Initialisation de Terraform
       - name: Terraform Init
         id: init
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ env.AWS_REGION }}
-          TF_LOG: DEBUG
         run: terraform init
 
       # Étape 5: Validation de la configuration Terraform
@@ -131,20 +82,12 @@ jobs:
       - name: Terraform Plan
         id: plan
         if: github.event.inputs.action == 'plan' || github.event.inputs.action == 'apply'
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ env.AWS_REGION }}
         run: |
           echo "::group::Terraform Plan"
           terraform plan \
-            -var="aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" \
-            -var="aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
-            -var="aws_region=${{ env.AWS_REGION }}" \
             -var="db_username=${{ secrets.DB_USERNAME }}" \
             -var="db_password=${{ secrets.DB_PASSWORD }}" \
-            -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
-            -var="ssh_public_key=${{ github.event.inputs.use_stored_ssh_key == 'true' && secrets.EC2_SSH_PUBLIC_KEY || github.event.inputs.ssh_public_key || '' }}" \
+            -var="ec2_key_pair_name=${{ github.event.inputs.ssh_key_pair_name }}" \
             -var="github_token=${{ secrets.GH_PAT || '' }}" \
             -var="repo_owner=${{ github.repository_owner }}" \
             -var="repo_name=${{ github.repository }}" \
@@ -157,10 +100,6 @@ jobs:
       - name: Terraform Apply
         id: apply
         if: github.event.inputs.action == 'apply'
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ env.AWS_REGION }}
         run: |
           echo "::group::Terraform Apply"
           terraform apply -auto-approve tfplan
@@ -175,20 +114,12 @@ jobs:
       - name: Terraform Destroy
         id: destroy
         if: github.event.inputs.action == 'destroy'
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ env.AWS_REGION }}
         run: |
           echo "::group::Terraform Destroy"
           terraform destroy -auto-approve \
-            -var="aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" \
-            -var="aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
-            -var="aws_region=${{ env.AWS_REGION }}" \
             -var="db_username=${{ secrets.DB_USERNAME }}" \
             -var="db_password=${{ secrets.DB_PASSWORD }}" \
-            -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
-            -var="ssh_public_key=${{ github.event.inputs.use_stored_ssh_key == 'true' && secrets.EC2_SSH_PUBLIC_KEY || github.event.inputs.ssh_public_key || '' }}" \
+            -var="ec2_key_pair_name=${{ github.event.inputs.ssh_key_pair_name }}" \
             -var="github_token=${{ secrets.GH_PAT || '' }}" \
             -var="repo_owner=${{ github.repository_owner }}" \
             -var="repo_name=${{ github.repository }}"
