--- a/.github/workflows/2-backend-deploy.yml
+++ b/.github/workflows/2-backend-deploy.yml
@@ -73,8 +73,9 @@ jobs:
       - name: Set Environment Variables
         run: |
           # Utiliser les secrets s'ils existent, sinon utiliser les inputs
-          echo "EC2_IP=${{ secrets.EC2_PUBLIC_IP || github.event.inputs.ec2_public_ip }}" >> $GITHUB_ENV
-          echo "S3_BUCKET=${{ secrets.S3_BUCKET_NAME || github.event.inputs.s3_bucket_name }}" >> $GITHUB_ENV
+          echo "EC2_IP=${{ secrets.TF_EC2_PUBLIC_IP || secrets.EC2_PUBLIC_IP || github.event.inputs.ec2_public_ip }}" >> $GITHUB_ENV
+          echo "S3_BUCKET=${{ secrets.TF_S3_BUCKET_NAME || secrets.S3_BUCKET_NAME || github.event.inputs.s3_bucket_name }}" >> $GITHUB_ENV
+          echo "RDS_ENDPOINT=${{ secrets.TF_RDS_ENDPOINT || '' }}" >> $GITHUB_ENV
 
       # Étape 6: Téléchargement du WAR sur S3
       - name: Upload WAR to S3
