--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -20,6 +20,15 @@ on:
           - plan     # Prévisualiser les changements sans les appliquer
           - apply    # Appliquer les changements à l'infrastructure
           - destroy  # Détruire l'infrastructure existante
+      environment:
+        description: 'Environnement de déploiement'
+        required: true
+        default: 'dev'
+        type: choice
+        options:
+          - dev      # Environnement de développement
+          - pre-prod # Environnement de pré-production
+          - prod     # Environnement de production
 
 
 
@@ -89,6 +98,7 @@ jobs:
             -var="repo_owner=${{ github.repository_owner }}" \
             -var="repo_name=${{ github.repository }}" \
             -var="ssh_private_key_path=~/.ssh/id_rsa" \
+            -var="environment=${{ github.event.inputs.environment }}" \
             -no-color \
             -out=tfplan
           echo "::endgroup::"
@@ -151,7 +161,8 @@ jobs:
             -var="github_token=${{ secrets.GH_PAT || '' }}" \
             -var="repo_owner=${{ github.repository_owner }}" \
             -var="repo_name=${{ github.repository }}" \
-            -var="ssh_private_key_path=~/.ssh/id_rsa"
+            -var="ssh_private_key_path=~/.ssh/id_rsa" \
+            -var="environment=${{ github.event.inputs.environment }}"
           echo "::endgroup::"
         continue-on-error: false  # Arrête le workflow si la destruction échoue
 
